--- a/Lab6F_RecyclerView/app/src/main/res/layout/post_item.xml
+++ b/Lab6F_RecyclerView/app/src/main/res/layout/post_item.xml
@@ -4,35 +4,61 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="8dp">
 
     <ImageView
-        android:id="@+id/iv_item"
+        android:id="@+id/iv_img"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="200dp"
         android:background="#DADADA"/>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <ImageView
+            android:id="@+id/iv_like"
+            android:background="#ff0000"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_centerVertical="true"/>
 
         <TextView
-            android:id="@+id/tv_postLikeCount"
+            android:id="@+id/tv_likeCount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/iv_like"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="8dp"
             android:lines="1"
             android:text="1234"
-            android:textSize="20sp"/>
+            android:textSize="16sp"/>
 
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/iv_share"
+            android:background="#005555"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#dddddd"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
 
         <TextView
             android:id="@+id/tv_userName"
@@ -40,7 +66,7 @@
             android:layout_height="wrap_content"
             android:text="ansta_"
             android:lines="1"
-            android:textSize="24sp"/>
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/tv_postText"
@@ -49,7 +75,7 @@
             android:text="불꽃놀이했어요 :)"
             android:lines="1"
             android:layout_marginLeft="8dp"
-            android:textSize="24sp"/>
+            android:textSize="20sp"/>
 
     </LinearLayout>
 
