--- a/Queenstagram/app/src/main/res/layout/post_item.xml
+++ b/Queenstagram/app/src/main/res/layout/post_item.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/iv_img"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="400dp"
         android:background="#DADADA"/>
 
     <RelativeLayout
@@ -58,11 +58,12 @@
 
         <TextView
             android:id="@+id/tv_userName"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text="UserName"
             android:lines="1"
-            android:textSize="20sp"/>
+            android:textSize="18sp"
+            android:textColor="#2E42AC"/>
 
         <TextView
             android:id="@+id/tv_postText"
@@ -71,7 +72,8 @@
             android:text="PostText"
             android:lines="1"
             android:layout_marginLeft="8dp"
-            android:textSize="20sp"/>
+            android:textSize="18sp"
+            android:textColor="#000000"/>
 
     </LinearLayout>
 
